camera_subscriber/log/build_2024-01-23_21-45-48/camera_subscriber/stderr.log
  File "/home/michal/projekt/camera_subscriber/install/camera_subscriber/lib/python3.10/site-packages/camera_subscriber/camera_node.py", line 35
    if self.x_y[1] > self.window_size[1]
                                        ^
SyntaxError: expected ':'

